--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "node server.js",
+    "build": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "lint": "eslint src"
   },
   "repository": {
@@ -36,6 +37,7 @@
     "babel-preset-stage-0": "^6.0.15",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
+    "offline-plugin": "^2.2.0",
     "react-hot-loader": "^3.0.0-alpha.12",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
@@ -44,6 +46,7 @@
     "material-ui": "^0.15.0-beta.2",
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
+    "react-lite": "^0.15.9",
     "react-tap-event-plugin": "^1.0.0"
   }
 }
