--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "react-lite": "^0.15.9",
+    "react-router": "^2.3.0",
     "react-tap-event-plugin": "^1.0.0"
   }
 }
