--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ru-now",
-  "version": "0.0.2",
+  "version": "1.0.0-0",
   "description": "An awesome app for hungry university people",
   "scripts": {
     "start": "node server.js",
